<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical">

	<EditText
		android:id="@+id/IR_etDescription"
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:hint="@string/description"
		android:layout_margin="10dp"/>

	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:orientation="horizontal"
		android:gravity="center_horizontal"
		android:layout_weight="1.0">

		<NumberPicker
			android:id="@+id/IR_npMinutes"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"/>

		<NumberPicker
			android:id="@+id/IR_npSeconds"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"/>

	</LinearLayout>

	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:orientation="horizontal"
		android:gravity="center_horizontal">

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_margin="10dp"
			android:id="@+id/IR_addtimertolistCancelButton"
			android:text="@string/cancel"/>

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_margin="10dp"
			android:id="@+id/IR_addtimertolistAddButton"
			android:text="@string/ok"/>

	</LinearLayout>

</LinearLayout>

